feat(core) simple FFM API (JDK 21) test
TODO: refactor to JMH benchmark