@@ -466,6 +466,7 @@
         <mkdir dir="${bin.lwjgl}/core/META-INF/versions/9" if:set="jdk9"/>
         <mkdir dir="${bin.lwjgl}/core/META-INF/versions/10" if:set="jdk10"/>
         <mkdir dir="${bin.lwjgl}/core/META-INF/versions/16" if:set="jdk16"/>
+        <mkdir dir="${bin.lwjgl}/core/META-INF/versions/21" if:set="jdk21"/>
         <delete file="${bin.lwjgl}/core/META-INF/versions/9/module-info.class" quiet="true" if:set="jdk9"/>
         <lwjgl.javac9 destdir="${bin.lwjgl}/core/META-INF/versions/9" taskname="javac: Core - Java 9" if:set="jdk9">
             <classpath>
@@ -495,6 +496,17 @@
             </src>
             <include name="**"/>
         </lwjgl.javac16>
+        <lwjgl.javac21 destdir="${bin.lwjgl}/core/META-INF/versions/21" taskname="javac: Core - Java 21" if:set="jdk21">
+            <classpath>
+                <pathelement path="${bin.lwjgl}/core"/>
+            </classpath>
+            <src>
+                <pathelement path="${module.lwjgl}/core/src/main/java21"/>
+            </src>
+            <include name="**"/>
+            <compilerarg value="--enable-preview"/>
+            <compilerarg value="-Xlint:-preview"/>
+        </lwjgl.javac21>
 
         <parallel threadsPerProcessor="1">
             <compileBinding binding="assimp"/>
@@ -925,6 +937,7 @@
                 <pathelement path="${bin.lwjgl}/core/META-INF/versions/9" if:set="core.java9"/>
                 <pathelement path="${bin.lwjgl}/core/META-INF/versions/10" if:set="core.java10"/>
                 <pathelement path="${bin.lwjgl}/core/META-INF/versions/16" if:set="core.java16"/>
+                <pathelement path="${bin.lwjgl}/core/META-INF/versions/21" if:set="core.java21"/>
                 <pathelement path="${module.classpath}"/>
                 <pathelement path="${bin.test}"/>
                 <pathelement path="${bin.samples}"/>
